Yahoo.com has fragments of wrongly-scaled content throughout when using CGDisplayListImageBufferBackend https://bugs.webkit.org/show_bug.cgi?id=232459

Reviewed by Dean Jackson.

Source/WebCore:

* platform/graphics/GraphicsContext.h:
Add a WEBCORE_EXPORT that the compiler now wants.

* platform/graphics/cg/GraphicsContextCG.h:
Add a `final` that was missing; not sure why the compiler didn't complain
about the lack of `final` OR `override`, but it does now!
Change getCTM and setCTM to `override` instead of `final` so that
GraphicsContextCGDisplayList can override them.

Source/WebKit:

Similar to r284991, 2D transforms that getCTM() from a CGBitmap context and set
the result on a CGDisplayList with setCTM() (via BifurcatedGraphicsContext)
corrupt the display list's CTM, because it starts out in a different initial state,
because the display list is always recorded with a 1x scale.

To fix this, sneak the fake scale into setCTM/getCTM (multiplying it in in get,
dividing it out in set) so that it appears to the outside as if it has
the same base transform as the CGBitmap context.

* Shared/RemoteLayerTree/CGDisplayListImageBufferBackend.cpp:
(WebKit::GraphicsContextCGDisplayList::GraphicsContextCGDisplayList):
(WebKit::CGDisplayListImageBufferBackend::create):
* Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStore::display):



Canonical link: https://commits.webkit.org/243661@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285017 268f45cc-cd09-0410-ab3c-d52691b4dbfc